# Othala

./: .gitignore  CLEANUP-PLAN.md  Cargo.toml  MVP-SPEC.md  README.md  RELEASE.md  RELEASE_NOTES.md  SPEC.md  flake.nix  process-compose.yaml
.claude/: settings.local.json
config/: org.toml
config/repos/: othala.toml
crates/orch-agents/: Cargo.toml
crates/orch-agents/src/: adapter.rs  error.rs  lib.rs  runner.rs  setup.rs  signal.rs  types.rs  util.rs
crates/orch-core/: Cargo.toml
crates/orch-core/src/: chat.rs  chat_state.rs  config.rs  events.rs  lib.rs  state.rs  types.rs  validation.rs
crates/orch-git/: Cargo.toml
crates/orch-git/src/: command.rs  error.rs  lib.rs  repo.rs  snapshot.rs  worktree.rs
crates/orch-graphite/: Cargo.toml  README.md
crates/orch-graphite/src/: client.rs  command.rs  error.rs  lib.rs  types.rs
crates/orch-notify/: Cargo.toml
crates/orch-notify/src/: error.rs  lib.rs  mapper.rs  sink.rs  types.rs
crates/orch-tui/: Cargo.toml
crates/orch-tui/src/: action.rs  app.rs  chat_parse.rs  chat_render.rs  error.rs  event.rs  lib.rs  main.rs  model.rs  output_style.rs  runner.rs  ui.rs  ui_activity.rs  ui_footer.rs  ui_format.rs
crates/orch-verify/: Cargo.toml
crates/orch-verify/src/: command.rs  discover.rs  error.rs  lib.rs  runner.rs  types.rs
crates/orch-web/: Cargo.toml
crates/orch-web/src/: error.rs  handler.rs  lib.rs  main.rs  merge_queue.rs  model.rs  request.rs  response.rs  router.rs  routes.rs  sandbox.rs  server.rs  state.rs
crates/orchd/: Cargo.toml  README.md
crates/orchd/src/: agent_dispatch.rs  agent_log.rs  attribution.rs  auto_compact.rs  chat_workspace.rs  ci_gen.rs  code_search.rs  context_gen.rs  context_gen_telemetry.rs  context_graph.rs  context_manager.rs  conversation.rs  custom_commands.rs  daemon_loop.rs  daemon_status.rs  delegation.rs  delta_report.rs  dependency_graph.rs  e2e_scenarios.rs  e2e_tester.rs  editor.rs  env_inject.rs  event_log.rs  file_watcher.rs  global_context.rs  graphite_agent.rs  ignore.rs  lib.rs  lifecycle_gate.rs  lsp.rs  main.rs  mcp.rs  mcp_resources.rs  mcp_transport.rs  metrics.rs  mission_vault.rs  model_options.rs  orchestration_metrics.rs  output_stream.rs  permissions.rs  (+28 more)
docs/: NEXT-GEN.md  hardening-todos.md  operator-boundary.md
logs/reliability/: 2026-02-20.jsonl
scripts/: e2e-ready.sh  e2e-test.sh  install-latest.sh  metrics-snapshot.sh
scripts/operator/: blocked_report.sh  dashboard_tmux.sh  hourly_check.sh  orthala-status.sh  reliability_snapshot.sh  stack_janitor.sh  start_repo_daemon.sh  status_tree.sh
skills/othala-operator/: SKILL.md
skills/othala-operator/references/: ops-playbook.md  vault-prompting.md
templates/: task-spec.example.json
templates/prompts/: context-generator.md  docs-specialist.md  frontend-specialist.md  implementer.md  qa-spec-generator.md  qa-validator.md  reviewer.md  stack-captain.md  tests-specialist.md
