[workspace]
resolver = "2"
members = [
  "crates/orch-core",
  "crates/orch-git",
  "crates/orch-graphite",
  "crates/orch-verify",
  "crates/orch-agents",
  "crates/orch-notify",
  "crates/orchd",
  "crates/orch-tui",
  "crates/orch-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
