[package]
name = "orch-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
crossterm = "0.28"
orch-agents = { path = "../orch-agents" }
orch-core = { path = "../orch-core" }
orchd = { path = "../orchd" }
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
