[package]
name = "orch-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
orch-core = { path = "../orch-core" }
orchd = { path = "../orchd" }
orch-verify = { path = "../orch-verify" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
