[package]
name = "orchd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
orch-core = { path = "../orch-core" }
orch-notify = { path = "../orch-notify" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
