[package]
name = "orchd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "othala"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
orch-agents = { path = "../orch-agents" }
orch-core = { path = "../orch-core" }
orch-git = { path = "../orch-git" }
orch-graphite = { path = "../orch-graphite" }
orch-notify = { path = "../orch-notify" }
orch-tui = { path = "../orch-tui" }
orch-verify = { path = "../orch-verify" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
