[package]
name = "orchd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "othala"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
orch-agents = { path = "../orch-agents" }
orch-core = { path = "../orch-core" }
orch-git = { path = "../orch-git" }
orch-graphite = { path = "../orch-graphite" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
thiserror = "1"
